--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,15 +5,15 @@
             <div class="row g-3">
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Email</label>
-                    <input type="email" name="" id="" class="form-control">
+                    <input type="email" name="email" [(ngModel)]="email" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Password</label>
-                    <input type="password" name="" id="" class="form-control">
+                    <input type="password" name=" password" [(ngModel)]=" password" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label"></label>
-                    <button class="btn btn-warning">Sign Up</button>
+                    <button (click)="readValues()" class="btn btn-warning">Sign Up</button>
                 </div>
             </div>
         </div>
